--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -1,8 +1,11 @@
 @import 'utils/all';
 
-body {
+html, body {
   height: 100%;
   width: 100%;
+}
+
+body {
   margin: 0;
   background-color: $gunmetal;
   color: #FFFFFF;
@@ -10,5 +13,6 @@ body {
 }
 
 #app {
-  margin: 8px;
+  height: 100%;
+  width: 100%;
 }
